# learningLocomotion

./: CMakeLists.txt
ApproximateQLearning/: ApproximateQLearning.cpp  ApproximateQLearning.h
Controller/: Controller.cpp  Controller.h
FileHandler/: FileHandler.cpp  FileHandler.h
Learn/: Learn.cpp
LearningAlgorithm/: LearningAlgorithm.cpp  LearningAlgorithm.h
OscillationAnalyzer_OutputSignal/: OscillationAnalyzer_OutputSignal.cpp
Output/: plotScript.txt
QLearning/: QLearning.cpp  QLearning.h
Robot/: Robot.cpp  Robot.h
SimulationOpenRave/: SimulationOpenRave.cpp  SimulationOpenRave.h
VisualTracker/: VisualTracker.cpp  VisualTracker.h  VisualTrackerApplication.cpp
Y1ModularRobot/: Y1ModularRobot.cpp  Y1ModularRobot.h
